--- a/style.css
+++ b/style.css
@@ -1,9 +1,43 @@
+@font-face {
+    font-family: 'zabars';
+    src: url('./fonts/zabars.ttf') format('truetype');
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body {
+    font-family: 'zabars', Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    background: url("./img/background.jpg") center no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 canvas {
+    /* display: none !important; */
     background-color: black;
+    display: block;
+    border-radius: 10px;
+}
+
+@media only screen and (max-width: 720px) {
+    canvas {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 480px) {
+    h1 {
+        display: none;
+    }
+
+    canvas {
+        width: 100%;
+        height: 100vh;
+    }
 }
