--- a/style.css
+++ b/style.css
@@ -95,9 +95,23 @@ canvas {
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.game-over-animation-open {
+.openInfoScreen-animation {
     animation-fill-mode: forwards;
-    animation-name: openGameOverScreen;
+    animation-name: openScreen;
+    animation-duration: 1s;
+    animation-delay: 0s;
+}
+
+.closeInfoScreen-animation {
+    animation-fill-mode: forwards;
+    animation-name: closeScreen;
+    animation-duration: 1s;
+    animation-delay: 0s;
+}
+
+.openScreen-animation {
+    animation-fill-mode: forwards;
+    animation-name: openScreen;
     animation-duration: 1s;
     animation-delay: 1s;
 }
@@ -163,8 +177,9 @@ canvas {
     opacity: 1;
 }
 
-.sound-icon-clicked {
-    opacity: 0.3;
+.sound-icon-clicked,
+.info-icon-clicked {
+    opacity: 0.3 !important;
 }
 
 #maximize-icon,
@@ -243,6 +258,47 @@ canvas {
     animation: rotate-animation 4s infinite;
 }
 
+#parent-info-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#info-container {
+    width: 0;
+    height: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: linear-gradient(to bottom, #0B9FC9, #EF9248);
+    border-radius: 10px;
+    gap: 25px;
+    font-size: 24px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+#info-container > div {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+#info-container img {
+    width: 80px;
+    height: 80px;
+}
+
+#info-container span {
+    max-width: max-content;
+}
+
 @keyframes rotate-animation {
     0% {
         transform: rotate(-45deg);
@@ -257,7 +313,7 @@ canvas {
     }
 }
 
-@keyframes openGameOverScreen {
+@keyframes openScreen {
     from {
         width: 0;
         height: 0;
@@ -266,6 +322,18 @@ canvas {
     to {
         width: 100%;
         height: 100%;
+    }
+}
+
+@keyframes closeScreen {
+    from {
+        width: 100%;
+        height: 100%;
+    }
+
+    to {
+        width: 0;
+        height: 0;
     }
 }
 
