--- a/style.css
+++ b/style.css
@@ -223,12 +223,14 @@ canvas {
 
 #movement-container {
     left: 0;
+    display: none;
 }
 
 #actions-container {
     right: 0 !important;
     margin-left: 0 !important;
     margin-right: 20px;
+    display: none;
 }
 
 #actions-container img {
@@ -297,6 +299,16 @@ canvas {
 
 #info-container span {
     max-width: max-content;
+}
+
+#paused-text {
+    font-size: 65px;
+    letter-spacing: 10px;
+    position: relative;
+    z-index: 100;
+    color: burlywood;
+    position: relative;
+    z-index: 0;
 }
 
 @keyframes rotate-animation {
@@ -392,5 +404,10 @@ canvas {
 
     #play-container {
         height: 64px;
+    }
+
+    #movement-container,
+    #actions-container {
+        display: flex;
     }
 }
